Crash in [@ java.lang.AssertionError: at org.mozilla.geckoview.GeckoSession.onWindowBoundsChanged(GeckoSession.java)]
Categories
(GeckoView :: General, defect, P1)
Tracking
(firefox74 wontfix, firefox75 fixed, firefox76 fixed)
People
(Reporter: fluffyemily, Assigned: agi)
References
(Regression)
Details
(Keywords: crash, regression, Whiteboard: [geckoview:m76])
Crash Data
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
This bug is for crash report bp-530e206a-49bc-472e-99ed-da74e0200312.
Java stack trace:
java.lang.AssertionError
at org.mozilla.geckoview.GeckoSession.onWindowBoundsChanged(GeckoSession.java:2)
at org.mozilla.geckoview.GeckoSession.onSurfaceChanged(GeckoSession.java:8)
at org.mozilla.geckoview.GeckoDisplay.surfaceChanged(GeckoDisplay.java:4)
at org.mozilla.geckoview.GeckoDisplay.surfaceChanged(GeckoDisplay.java:1)
at org.mozilla.geckoview.GeckoView$Display.onSurfaceChanged(GeckoView.java:2)
at org.mozilla.gecko.SurfaceViewWrapper$ListenerWrapper.surfaceChanged(SurfaceViewWrapper.java:2)
at android.view.SurfaceView.updateSurface(SurfaceView.java:761)
at android.view.SurfaceView.setFrame(SurfaceView.java:378)
at android.view.View.layout(View.java:20945)
at android.widget.FrameLayout.layoutChildren(FrameLayout.java:325)
at android.widget.FrameLayout.onLayout(FrameLayout.java:261)
at android.view.View.layout(View.java:20948)
at android.view.ViewGroup.layout(ViewGroup.java:6279)
at android.widget.FrameLayout.layoutChildren(FrameLayout.java:325)
at android.widget.FrameLayout.onLayout(FrameLayout.java:261)
at android.view.View.layout(View.java:20948)
at android.view.ViewGroup.layout(ViewGroup.java:6279)
at androidx.swiperefreshlayout.widget.SwipeRefreshLayout.onLayout(SwipeRefreshLayout.java:11)
at android.view.View.layout(View.java:20948)
at android.view.ViewGroup.layout(ViewGroup.java:6279)
at androidx.coordinatorlayout.widget.CoordinatorLayout.onLayoutChild(CoordinatorLayout.java:54)
at androidx.coordinatorlayout.widget.CoordinatorLayout.onLayout(CoordinatorLayout.java:8)
at android.view.View.layout(View.java:20948)
at android.view.ViewGroup.layout(ViewGroup.java:6279)
at android.widget.FrameLayout.layoutChildren(FrameLayout.java:325)
at android.widget.FrameLayout.onLayout(FrameLayout.java:261)
at android.view.View.layout(View.java:20948)
at android.view.ViewGroup.layout(ViewGroup.java:6279)
at android.widget.LinearLayout.setChildFrame(LinearLayout.java:1842)
at android.widget.LinearLayout.layoutVertical(LinearLayout.java:1686)
at android.widget.LinearLayout.onLayout(LinearLayout.java:1595)
at android.view.View.layout(View.java:20948)
at android.view.ViewGroup.layout(ViewGroup.java:6279)
at android.widget.FrameLayout.layoutChildren(FrameLayout.java:325)
at android.widget.FrameLayout.onLayout(FrameLayout.java:261)
at android.view.View.layout(View.java:20948)
at android.view.ViewGroup.layout(ViewGroup.java:6279)
at android.widget.LinearLayout.setChildFrame(LinearLayout.java:1842)
at android.widget.LinearLayout.layoutVertical(LinearLayout.java:1686)
at android.widget.LinearLayout.onLayout(LinearLayout.java:1595)
at android.view.View.layout(View.java:20948)
at android.view.ViewGroup.layout(ViewGroup.java:6279)
at android.widget.FrameLayout.layoutChildren(FrameLayout.java:325)
at android.widget.FrameLayout.onLayout(FrameLayout.java:261)
at android.view.View.layout(View.java:20948)
at android.view.ViewGroup.layout(ViewGroup.java:6279)
at android.widget.LinearLayout.setChildFrame(LinearLayout.java:1842)
at android.widget.LinearLayout.layoutVertical(LinearLayout.java:1686)
at android.widget.LinearLayout.onLayout(LinearLayout.java:1595)
at android.view.View.layout(View.java:20948)
at android.view.ViewGroup.layout(ViewGroup.java:6279)
at android.widget.FrameLayout.layoutChildren(FrameLayout.java:325)
at android.widget.FrameLayout.onLayout(FrameLayout.java:261)
at com.android.internal.policy.DecorView.onLayout(DecorView.java:902)
at android.view.View.layout(View.java:20948)
at android.view.ViewGroup.layout(ViewGroup.java:6279)
at android.view.ViewRootImpl.performLayout(ViewRootImpl.java:3037)
at android.view.ViewRootImpl.performTraversals(ViewRootImpl.java:2545)
at android.view.ViewRootImpl.doTraversal(ViewRootImpl.java:1636)
at android.view.ViewRootImpl$TraversalRunnable.run(ViewRootImpl.java:7946)
at android.view.Choreographer$CallbackRecord.run(Choreographer.java:1092)
at android.view.Choreographer.doCallbacks(Choreographer.java:893)
at android.view.Choreographer.doFrame(Choreographer.java:812)
at android.view.Choreographer$FrameDisplayEventReceiver.run(Choreographer.java:1078)
at android.os.Handler.handleCallback(Handler.java:907)
at android.os.Handler.dispatchMessage(Handler.java:105)
at android.os.Looper.loop(Looper.java:216)
at android.app.ActivityThread.main(ActivityThread.java:7625)
at java.lang.reflect.Method.invoke(Native Method)
at com.android.internal.os.RuntimeInit$MethodAndArgsCaller.run(RuntimeInit.java:524)
at com.android.internal.os.ZygoteInit.main(ZygoteInit.java:987)
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 1•6 years ago
|
||
There are cases when GV is being animated and it ends up being smaller than the
dynamic toolbar for a few frames. When that happens we really don't want to
crash and we can just ignore it.
Comment 3•6 years ago
|
||
Thanks for fixing this!
So the crash happens during the initializing Fenix window? (I am seeing android.widget.FrameLayout.onLayout in a stack).
| Assignee | ||
Comment 4•6 years ago
|
||
Yeah either that or for some reason the window ends up being too small (e.g. in one of those multi-window view that some android versions have). Either way we shouldn't crash in this case.
Comment 5•6 years ago
|
||
Thank you, Agi. yeah multi-window seems to be one of other causes.
Comment 6•6 years ago
|
||
| bugherder | ||
Comment 7•6 years ago
|
||
Do we need this on Beta for GV75?
Updated•6 years ago
|
| Assignee | ||
Comment 8•6 years ago
|
||
Comment on attachment 9134207 [details]
Bug 1621966 - Don't crash when the dynamic toolbar is bigger than the screen.
Beta/Release Uplift Approval Request
- User impact if declined: Fenix will crash occasionally in some weird configurations
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): We just don't throw an exception when the screen is too small.
- String changes made/needed:
| Assignee | ||
Comment 9•6 years ago
|
||
We should probably do that since it's a crash and it has some volume, thanks for asking Ryan.
Comment 10•6 years ago
|
||
Comment on attachment 9134207 [details]
Bug 1621966 - Don't crash when the dynamic toolbar is bigger than the screen.
geckoview crash fix, approved for 75.0b7
Comment 11•6 years ago
|
||
| bugherder uplift | ||
Updated•5 years ago
|
Description
•