Bug 1621966 - Don't crash when the dynamic toolbar is bigger than the screen. r=botond,snorp a=jcristau

There are cases when GV is being animated and it ends up being smaller than the
dynamic toolbar for a few frames. When that happens we really don't want to
crash and we can just ignore it.

Differential Revision: https://phabricator.services.mozilla.com/D67364

--HG--
extra : source : ccb202dd63cb404b4ec2c648bc53c6f32b9162d0